No polyfill on lib.

--- a/babel.config.json
+++ b/babel.config.json
@@ -4,8 +4,8 @@
             "@babel/preset-env",
             {
                 "targets": "> 0.25%, not dead",
-                "useBuiltIns": "usage",
-                "corejs": 3
+                "useBuiltIns": false,
+                "modules": false
             }
         ]
     ],
