--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "private": true,
     "license": "zlib",
     "description": "String formatting of curly braces notation for TS/JS.",
+    "homepage": "https://github.com/sbrockma/std-format#readme",
+    "repository": "github:sbrockma/std-format",
     "main": "./dist/bundle.umd.js",
     "types": "./dist/types/index.d.ts",
     "dependencies": {},
