--- a/babel.config.json
+++ b/babel.config.json
@@ -5,7 +5,8 @@
             {
                 "targets": "> 0.25%, not dead",
                 "useBuiltIns": false,
-                "modules": false
+                "modules": false,
+                "corejs": false
             }
         ]
     ],
