chore: exclude *.test.d.ts files from distribution.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,9 @@
         "src/**/*"
     ],
     "exclude": [
-        "node-modules/**/*"
+        "node-modules",
+        "src/**/*.test.ts",
+        "src/**/*.test.d.ts"
     ],
     "compileOnSave": false
 }
