--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "repository": "github:sbrockma/std-format",
     "main": "./dist/std-format.umd.js",
     "types": "./dist/types/index.d.ts",
-    "dependencies": {},
+    "dependencies": {
+        "jsbi": "^4.3.2"
+    },
     "devDependencies": {
         "@babel/cli": "^7.26.4",
         "@babel/core": "^7.26.10",
