chore: Added multiple build targets: esm, cjs and umd. Configured babel to transpile ES5/ES6 for different targets. Added api-extractor to create single .d.ts types file.

--- a/.npmignore
+++ b/.npmignore
@@ -6,10 +6,11 @@
 .gitattributes
 .npmignore
 package-lock.json
-babel.config.json
+babel.config.js
 karma.conf.js
 tsconfig.json
 typedoc.json
 webpack.config.js
+api-extractor.json
 workspace.code-workspace
 INSTRUCTIONS.md
