--- a/package.json
+++ b/package.json
@@ -7,8 +7,15 @@
     "description": "String formatting function for TS/JS.",
     "homepage": "https://github.com/sbrockma/std-format#readme",
     "repository": "github:sbrockma/std-format",
-    "main": "./dist/std-format.umd.js",
-    "types": "./dist/types/index.d.ts",
+    "main": "./dist/std-format.cjs.js",
+    "module": "./dist/std-format.esm.mjs",
+    "browser": "./dist/std-format.umd.js",
+    "exports": {
+        "require": "./dist/std-format.cjs.js",
+        "import": "./dist/std-format.esm.mjs",
+        "browser": "./dist/std-format.umd.js"
+    },
+    "types": "./dist/std-format.d.ts",
     "dependencies": {
         "jsbi": "^4.3.2"
     },
@@ -18,6 +25,7 @@
         "@babel/preset-env": "^7.26.9",
         "@types/jasmine": "^5.1.7",
         "@webpack-cli/serve": "^3.0.1",
+        "api-extractor": "^99.99.99",
         "babel-loader": "^10.0.0",
         "clean-webpack-plugin": "^4.0.0",
         "jasmine": "^5.6.0",
@@ -28,6 +36,7 @@
         "karma-sourcemap-loader": "^0.4.0",
         "karma-webpack": "^5.0.1",
         "npm-watch": "^0.13.0",
+        "rimraf": "^6.0.1",
         "terser-webpack-plugin": "^5.3.14",
         "ts-loader": "^9.5.2",
         "typedoc": "^0.28.1",
@@ -46,8 +55,8 @@
         }
     },
     "scripts": {
-        "build:dev": "webpack --mode development --progress",
-        "build:prod": "webpack --mode production --progress",
+        "build:dev": "rimraf dist && webpack --mode development && api-extractor run --local && rimraf dist/types",
+        "build:prod": "rimraf dist && webpack --mode production && api-extractor run --local && rimraf dist/types",
         "watch": "npm-watch build:dev",
         "test": "karma start",
         "docs": "typedoc"
