--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
         "module": "es2015",
         "moduleResolution": "bundler",
         "declaration": true,
-        "declarationDir": "./dist/types",
+        "declarationDir": "./dist/temp-types",
         "declarationMap": true,
         "preserveConstEnums": true,
         "sourceMap": true,
