--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@babel/cli": "^7.26.4",
         "@babel/core": "^7.26.10",
         "@babel/preset-env": "^7.26.9",
+        "@microsoft/api-extractor": "^7.52.4",
         "@types/jasmine": "^5.1.7",
         "@webpack-cli/serve": "^3.0.1",
         "api-extractor": "^99.99.99",
