--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
         "rimraf": "^6.0.1",
         "terser-webpack-plugin": "^5.3.14",
         "ts-loader": "^9.5.2",
-        "typedoc": "^0.28.1",
         "typescript": "^5.8.2",
         "webpack": "^5.98.0",
         "webpack-cli": "^6.0.1",
@@ -60,8 +59,7 @@
         "build:dev": "rimraf dist && webpack --mode development && api-extractor run --local && rimraf dist/temp-types",
         "build:prod": "rimraf dist && webpack --mode production && api-extractor run --local && rimraf dist/temp-types",
         "watch": "npm-watch build:dev",
-        "test": "karma start",
-        "docs": "typedoc"
+        "test": "karma start"
     },
     "browserslist": [
         "defaults"
