fix: Fixed default export error in esm.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
         "alwaysStrict": true,
         "removeComments": false, // Let babel remove comments.
         "allowSyntheticDefaultImports": true,
+        "esModuleInterop": true,
         "skipLibCheck": true
     },
     "include": [
