--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "description": "Simple string formatting library for TS/JS.",
     "homepage": "https://github.com/sbrockma/std-format#readme",
     "repository": "github:sbrockma/std-format",
+    "type": "module",
     "main": "./dist/std-format.cjs.js",
     "module": "./dist/std-format.esm.mjs",
     "browser": "./dist/std-format.umd.js",
@@ -31,6 +32,7 @@
         "@webpack-cli/serve": "^3.0.1",
         "api-extractor": "^99.99.99",
         "babel-loader": "^10.0.0",
+        "benchmark": "^2.1.4",
         "clean-webpack-plugin": "^4.0.0",
         "jasmine": "^5.6.0",
         "karma": "^6.4.4",
@@ -61,7 +63,8 @@
         "build:dev": "rimraf dist && webpack --mode development && api-extractor run --local && rimraf dist/temp-types",
         "build:prod": "rimraf dist && webpack --mode production && api-extractor run --local && rimraf dist/temp-types",
         "watch": "npm-watch build:dev",
-        "test": "karma start"
+        "test": "karma start",
+        "benchmark": "npm run build:prod && node benchmarks/benchmark.js"
     },
     "browserslist": [
         "defaults"
