--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "main": "./dist/std-format.cjs.js",
     "module": "./dist/std-format.esm.mjs",
     "browser": "./dist/std-format.umd.js",
+    "unpkg": "./dist/std-format.umd.js",
     "types": "./dist/std-format.d.ts",
     "exports": {
         ".": {
