chore: Renamed repo.

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "private": false,
     "license": "zlib",
     "description": "Simple string formatting library for TS/JS.",
-    "homepage": "https://github.com/sbrockma/std-format#readme",
-    "repository": "github:sbrockma/std-format",
+    "homepage": "https://github.com/sbrockma/ts-string-formatter",
+    "repository": "github:sbrockma/ts-string-formatter",
     "main": "dist/index.cjs.js",
     "module": "dist/index.esm.mjs",
     "browser": "dist/index.umd.min.js",
