chore: No tsx files.

--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
             "patterns": [
                 "src"
             ],
-            "extensions": "ts,tsx",
+            "extensions": "ts",
             "quiet": false
         }
     },
